ci: fix broken task names for the new version of publish-on-central

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -63,7 +63,6 @@ jobs:
   test-deploy:
     runs-on: ubuntu-latest
     timeout-minutes: 120
-    if: contains(github.repository, 'AlchemistSimulator/Alchemist') && contains('push workflow_dispatch', github.event_name)
     concurrency:
       group: ${{ github.workflow }}-test-deploy-${{ github.event.number || github.ref }}
       cancel-in-progress: true
@@ -73,8 +72,19 @@ jobs:
       - uses: DanySK/build-check-deploy-gradle-action@2.0.2
         with:
           build-command: true
+          check-command: |
+            ./gradlew tasks | grep releaseStagingRepositoryOnMavenCentral
+            ./gradlew tasks | grep closeStagingRepositoryOnMavenCentral
+          java-version: 11
+          should-run-codecov: false
+          should-deploy: false
+          should-validate-wrapper: false
+      - uses: DanySK/build-check-deploy-gradle-action@2.0.2
+        if: contains(github.repository, 'AlchemistSimulator/Alchemist') && contains('push workflow_dispatch', github.event_name)
+        with:
+          build-command: true
           check-command: true
-          deploy-command: ./gradlew closeKotlinMavenOnMavenCentralNexus --parallel
+          deploy-command: ./gradlew publishAllPublicationsToMavenCentralRepository closeStagingRepositoryOnMavenCentral --parallel
           java-version: 11
           should-run-codecov: false
           should-deploy: true
