--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,6 @@
 	path = site/themes/hugo-theme-relearn
 	url = https://github.com/McShelby/hugo-theme-relearn.git
 	shallow = true
+[submodule "site/content/tutorials/scafi/learning-scafi-alchemist"]
+	path = external-resources/learning-scafi-alchemist
+	url = https://github.com/scafi/learning-scafi-alchemist.git
