--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -73,7 +73,10 @@ jobs:
         with:
           build-command: true
           check-command: true
-          deploy-command: ./gradlew uploadKotlin close --parallel
+          deploy-command: >-
+            ./gradlew uploadKotlin close --parallel ||
+            ./gradlew uploadKotlin close --parallel ||
+            ./gradlew uploadKotlin close --parallel
           java-version: 11
           should-run-codecov: false
           should-deploy: true
