chore: add recursive nodes deployment

--- a/alchemist-loading/src/test/resources/yamlAliases/aliases.yml
+++ b/alchemist-loading/src/test/resources/yamlAliases/aliases.yml
@@ -8,72 +8,13 @@ _node: &node
   - type: Point
     parameters: [0, 0]
 
+_nodes: &nodes
+  [*node, *node, *node, *node, *node, *node, *node, *node, *node, *node,
+   *node, *node, *node, *node, *node, *node, *node, *node, *node, *node]
+
+_many_nodes: &many
+  [*nodes, *nodes, *nodes, *nodes, *nodes, *nodes, *nodes, *nodes, *nodes, *nodes,
+   *nodes, *nodes, *nodes, *nodes, *nodes, *nodes, *nodes, *nodes, *nodes, *nodes]
+
 deployments:
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
-  - *node
+  [*many, *many, *many, *many, *many, *many, *many, *many, *many, *many, *many]
