test(physics): fix image path

--- a/alchemist-physics/src/test/resources/testSquareExit.yml
+++ b/alchemist-physics/src/test/resources/testSquareExit.yml
@@ -2,7 +2,7 @@ incarnation: protelis
 
 environment:
   type: EnvironmentWithDynamics
-  parameters: [../square.png, 0.1, -60.0, -60.0]
+  parameters: [images/square.png, 0.1, -60.0, -60.0]
 
 deployments:
   - type: Rectangle
