ci: improve fork detection

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -3,6 +3,14 @@ on:
   workflow_call:
   workflow_dispatch:
 
+env:
+  CAN_ACCESS_SECRETS: >-
+    !github.event.repository.fork
+    && (
+      github.event_name != 'pull_request'
+      || github.event.pull_request.head.repo.full_name == github.repository
+    )
+
 jobs:
   # Runs all tests
   build:
@@ -51,6 +59,7 @@ jobs:
   # Performs a dry-deployment if credentials are available
   test-deploy:
     runs-on: ubuntu-latest
+    if: ${{ env.CAN_ACCESS_SECRETS }}
     timeout-minutes: 120
     concurrency:
       group: ${{ github.workflow }}-test-deploy-${{ github.event.number || github.ref }}
@@ -59,17 +68,6 @@ jobs:
       - name: Checkout
         uses: danysk/action-checkout@0.2.1
       - uses: DanySK/build-check-deploy-gradle-action@2.1.0
-        with:
-          build-command: true
-          check-command: |
-            ./gradlew tasks | grep releaseStagingRepositoryOnMavenCentral
-            ./gradlew tasks | grep closeStagingRepositoryOnMavenCentral
-          java-version: 11
-          should-run-codecov: false
-          should-deploy: false
-          should-validate-wrapper: false
-      - uses: DanySK/build-check-deploy-gradle-action@2.1.0
-        if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
         with:
           build-command: true
           check-command: true
@@ -132,7 +130,7 @@ jobs:
       - test-deploy
       - test-shadowjar
     runs-on: ubuntu-latest
-    if: github.event_name != 'pull_request' || github.event.pull_request.head.repo.full_name == github.repository
+    if: ${{ env.CAN_ACCESS_SECRETS }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3.0.2
