--- a/alchemist-physics/src/test/resources/testCustomizeGlobalReactionRate3.yml
+++ b/alchemist-physics/src/test/resources/testCustomizeGlobalReactionRate3.yml
@@ -4,6 +4,6 @@ environment:
   type: EnvironmentWithDynamics
   global-programs:
     - time-distribution:
-        type: DiracComb
+        type: ExponentialTime
         parameters: [0.5]
       type: PhysicsUpdate
