ci: remove trailing comma, see https://github.com/renovatebot/renovate/discussions/18090#discussioncomment-3787927

--- a/renovate.json
+++ b/renovate.json
@@ -15,7 +15,7 @@
     {
       "description": "Dokka updates should have type docs",
       "matchPackageNames": [
-        "org.jetbrains.dokka",
+        "org.jetbrains.dokka"
       ],
       "semanticCommitType": "docs"
     },
