--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -19,35 +19,22 @@ jobs:
         uses: danysk/action-checkout@0.2.3
       - uses: DanySK/build-check-deploy-gradle-action@2.1.14
         with:
-          build-command: true
+          # check that all tasks used in subsequent phases are there
+          build-command: >
+            ./gradlew
+            build clean close
+            hugoBuild
+            publishKotlinOSSRHPublicationToGithubRepository
+            release
+            shadowJar
+            uploadKotlin
+            taskTree
           check-command: |
-            ./gradlew check --parallel || ./gradlew check --parallel
+            ./gradlew build --parallel || ./gradlew build --parallel
           clean-command: |
             ./gradlew clean --parallel
           should-run-codecov: ${{ contains('Linux', runner.os) }}
           should-deploy: false
-  # Builds all shadow jars and runs them
-  test-shadowjar:
-    strategy:
-      matrix:
-        os: [ windows, macos, ubuntu ]
-    runs-on: ${{ matrix.os }}-latest
-    timeout-minutes: 60
-    concurrency:
-      group: ${{ github.workflow }}-test-shadowjar-${{ matrix.os }}-${{ github.event.number || github.ref }}
-      cancel-in-progress: true
-    steps:
-      - name: Checkout
-        uses: danysk/action-checkout@0.2.3
-      - uses: DanySK/build-check-deploy-gradle-action@2.1.14
-        with:
-          build-command: |
-            ./gradlew shadowJar --parallel || ./gradlew shadowJar --parallel
-          check-command: true
-          java-version: 11
-          should-run-codecov: false
-          should-deploy: false
-          should-validate-wrapper: false
   # Performs a dry-deployment if credentials are available
   test-deploy:
     runs-on: ubuntu-latest
@@ -126,7 +113,6 @@ jobs:
       - build
       - build-website
       - test-deploy
-      - test-shadowjar
     runs-on: ubuntu-latest
     if: >-
       !github.event.repository.fork
@@ -186,7 +172,6 @@ jobs:
       - build-website
       - release
       - test-deploy
-      - test-shadowjar
     if: >-
       always() && (
         contains(join(needs.*.result, ','), 'failure')
