ci: prefer '--dry-run' to relying on taskTree

--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -28,7 +28,7 @@ jobs:
             release
             shadowJar
             uploadKotlinOSSRH uploadKotlinMultiplatform
-            taskTree
+            --dry-run
           check-command: |
             ./gradlew build --parallel || ./gradlew build --parallel
           clean-command: |
