--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -32,7 +32,7 @@ jobs:
           check-command: |
             ./gradlew build --parallel || ./gradlew build --parallel
           clean-command: |
-            ./gradlew clean --parallel
+            ./gradlew clean --parallel || ./gradlew clean --parallel || true
           should-run-codecov: ${{ contains('Linux', runner.os) }}
           should-deploy: false
   # Performs a dry-deployment if credentials are available
