test(swingui): fix broken configuration file (`EuclideanDistance` has been replaced by `ConnectWithinDistance`)

--- a/alchemist-swingui/src/test/resources/test.yml
+++ b/alchemist-swingui/src/test/resources/test.yml
@@ -1,6 +1,6 @@
 incarnation: protelis
 network-model:
-  type: EuclideanDistance
+  type: ConnectWithinDistance
   parameters: [10]
 deployments:
   - type: Circle
