build: disable debug inspection job

--- a/.github/workflows/dispatcher.yml
+++ b/.github/workflows/dispatcher.yml
@@ -19,6 +19,7 @@ on:
 jobs:
   inspect:
     runs-on: ubuntu-latest
+    if: false
     steps:
       - run: |
           echo 'github.event_name = ${{ github.event_name }}'
