--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -27,7 +27,7 @@ jobs:
             publishKotlinOSSRHPublicationToGithubRepository \
             release \
             shadowJar \
-            uploadKotlinOSSRH uploadKotlinMultiplatform \
+            uploadKotlinOSSRH uploadKotlinMultiplatform uploadJvm uploadJs \
             --dry-run
             "
             eval $COMMAND || eval $COMMAND
@@ -57,10 +57,9 @@ jobs:
         with:
           build-command: true
           check-command: true
-          deploy-command: >-
-            ./gradlew uploadKotlinOSSRH uploadKotlinMultiplatform close --parallel ||
-            ./gradlew uploadKotlinOSSRH uploadKotlinMultiplatform close --parallel ||
-            ./gradlew uploadKotlinOSSRH uploadKotlinMultiplatform close --parallel
+          deploy-command: |
+            COMMAND="./gradlew uploadJvm uploadJs uploadKotlinOSSRH uploadKotlinMultiplatform close --parallel"
+            eval "$COMMAND" || eval "$COMMAND" || eval "$COMMAND"
           java-version: 11
           should-run-codecov: false
           should-deploy: true
