fix(loading): drop all kotlin-specific workarounds for JSR-223 variables, as bug [KT-51213](https://youtrack.jetbrains.com/issue/KT-51213) has been resolved

--- a/alchemist-loading/src/test/resources/regression/2022-coordination-null-bindings.yml
+++ b/alchemist-loading/src/test/resources/regression/2022-coordination-null-bindings.yml
@@ -5,7 +5,8 @@ variables:
     formula: null
   kotlin: &k
     language: kotlin
-    formula: "null.toString() // To be changed into base.toString() when this Kotlin bug has been solved: https://youtrack.jetbrains.com/issue/KT-51213"
+    # Once bugged due to: https://youtrack.jetbrains.com/issue/KT-51213
+    formula: base.toString()
   groovy: &g
     language: groovy
     formula: base.toString()
