feat(alchemist): add web option (w) to CLI

--- a/src/main/resources/it/unibo/alchemist/cli/CLI.properties
+++ b/src/main/resources/it/unibo/alchemist/cli/CLI.properties
@@ -80,3 +80,6 @@ vv_description = Very verbose mode: prints debug-level informations. Slows the s
 
 vvv_longName = vvverbose
 vvv_description = Very very verbose mode: prints trace-level informations. Slows the simulator down. An awful lot.
+
+w_longName = web
+w_description = Runs the simulation using the Web Renderer
