refactor(web-renderer): rename UtilityModule to StartBrowserModule

--- a/alchemist-web-renderer/src/jvmMain/resources/application.conf
+++ b/alchemist-web-renderer/src/jvmMain/resources/application.conf
@@ -14,7 +14,7 @@ ktor {
         modules = [
             it.unibo.alchemist.server.modules.InstallModuleKt.installModule,
             it.unibo.alchemist.server.modules.RoutingModuleKt.routingModule,
-            it.unibo.alchemist.server.modules.UtilityModuleKt.startBrowserModule
+            it.unibo.alchemist.server.modules.StartBrowserModuleKt.startBrowserModule
         ]
     }
 }
