--- a/.github/workflows/rebase-on-comment.yml
+++ b/.github/workflows/rebase-on-comment.yml
@@ -2,6 +2,9 @@ on:
   issue_comment:
     types: [created]
 
+concurrency:
+  group: ${{ github.workflow }}-${{ github.event.number || github.ref }}
+
 jobs:
   check-for-rebase:
     uses: DanySK/workflows/.github/workflows/rebase-on-comment.yml@master
