ci: pass an existing token to the auto-rebase workflow

--- a/.github/workflows/rebase-on-comment.yml
+++ b/.github/workflows/rebase-on-comment.yml
@@ -9,4 +9,4 @@ jobs:
   check-for-rebase:
     uses: DanySK/workflows/.github/workflows/rebase-on-comment.yml@master
     secrets:
-      token: ${{ secrets.WORKFLOW_TOKEN }}
+      token: ${{ secrets.DEPLOYMENT_TOKEN }}
